# skyboxer

./: .gitignore  Cargo.toml  Makefile  flake.nix
.github/workflows/: deploy.yml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/skyboxer/: Cargo.toml
crates/skyboxer-wasm/: Cargo.toml
crates/skyboxer-wasm/src/: lib.rs
crates/skyboxer/src/: lib.rs
public/: index.html  style.css
