[package]
name = "skyboxer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { workspace = true }
png = "0.18"
bytemuck = "1"
wasm-bindgen = "0.2"
skyboxer = { path = "../../crates/skyboxer" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
